[gd_scene load_steps=5 format=2]

[ext_resource path="res://Shaders/Lights/LightsBehaviourHandler.gd" type="Script" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Flick"
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.25, 1.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="RectangleShape2D" id=1]

[node name="LightsBehaviourHandler" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flick = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_self_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_self_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
